Fixed if condition line 177 in index.js

--- a/index.html
+++ b/index.html
@@ -241,7 +241,8 @@
                     <div id="taskPlanner" aria-labelledby="taskPlannerTab" role="tabpanel" aria-hidden="false" class="fade tab-pane active show">
                         <div class="pt-3 px-1 row">
                             <div class="col-sm-6 col-12">
-                                kkkk
+                                <video src="resources/videos/taskPlannerDemo.webm" type="video/webm" controls="autplay"></video>
+                                <p class="m-0 p-0"> This a task planner. You can edit or delete the tasks.</p>
                         </div>
                     </div>
                     <div id="alarmClock" aria-labelledby="alarmClockTab" role="tabpanel" aria-hidden="true" class="fade tab-pane">
