--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <!--Sills-->
             <section id="skills" class="container p-4 justify-content-center">
                 <h1 class="m-5 p-10 text-center">Skills</h1>
-                <nav class="nav nav-tabs pt-5" role="tablist">
+                <nav class="nav nav-tabs pt-5" id="navTabs" role="tablist">
                     <a id="hardSkillsTab" role="tab" data-id="hardTab" aria-controls="hardSkillsTab" aria-selected="true" class="lead nav-item nav-link active w-50 text-center">Technical Skills</a>
-                    <a id="softSkillsTab" href="#" role="tab" data-id="softTab" aria-controls="softSkillsTab" tabindex="-1" aria-selected="false" class="lead nav-item nav-link w-50 text-center">Soft Skills</a>
+                    <a id="softSkillsTab" role="tab" data-id="softTab" aria-controls="softSkillsTab" tabindex="-1" aria-selected="false" class="lead nav-item nav-link w-50 text-center">Soft Skills</a>
                 </nav>
 
                 <div class="tab-content pb-4">
@@ -87,8 +87,8 @@
                             <div class="col-sm-6 col-12">
                                 <div>
                                     <p class="lead mb-1 mt-2">HTML</p>
-                                    <span class="circle"></span>
-                                    <span class="circle"></span>
+                                    <span class="circle" id="circle1"></span>
+                                    <span class="circle" id="circle2"></span>
                                     <span class="circle"></span>
                                     <span class="circle"></span>
                                     <span class="circle"></span>
@@ -232,8 +232,8 @@
                 <h1 class="m-5 p-10 text-center">Projects</h1>
 
                 <div class="d-flex align-items-start">
-                    <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                      <button class="nav-link  active" id="taskPlannerTab" data-bs-toggle="pill" data-bs-target="#taskPlanner" type="button" role="tab" aria-controls="taskPlanner" aria-selected="true">Task Planner</button>
+                    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                      <button class="nav-link active text-dark" id="taskPlannerTab" data-bs-toggle="pill" data-bs-target="#taskPlanner" type="button" role="tab" aria-controls="taskPlanner" aria-selected="true">Task Planner</button>
                       <button class="nav-link" id="alarmClockTab" data-bs-toggle="pill" data-bs-target="#alarmClock" type="button" role="tab" aria-controls="alarmClock" aria-selected="false">Alarm Clock</button>
                       <!-- <button class="nav-link" id="robotGameTab" data-bs-toggle="pill" data-bs-target="#robotGame" type="button" role="tab" aria-controls="robotGame" aria-selected="false">Robot Game</button> -->
                     </div>
@@ -248,7 +248,7 @@
                       <div class="tab-pane fade" id="alarmClock" role="tabpanel" aria-labelledby="alarmClockTab">
                         <video src="resources/videos/alarmClockDemo.webm" type="video/webm" autoplay muted loop></video>
                         <div class="info">
-                            <p> This an alarm clock. It shows time in digital and analog format. You can set, delete and snooze alarms.</p>   
+                            <p class="p-3"> This an alarm clock. It shows time in digital and analog format. You can set, delete and snooze alarms.</p>   
                         </div>
                       </div>
                       <!-- <div class="tab-pane fade" id="robotGame" role="tabpanel" aria-labelledby="robotGameTab">
@@ -280,7 +280,7 @@
            
         </footer>
         
-
+        <script src="./js/script.js"></script>
         <!--Bootstrap JavaScript-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
