--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
                 <div class="d-flex align-items-start">
                     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                      <button class="nav-link active text-dark" id="taskPlannerTab" data-bs-toggle="pill" data-bs-target="#taskPlanner" type="button" role="tab" aria-controls="taskPlanner" aria-selected="true">Task Planner</button>
+                      <button class="nav-link active" id="taskPlannerTab" data-bs-toggle="pill" data-bs-target="#taskPlanner" type="button" role="tab" aria-controls="taskPlanner" aria-selected="true">Task Planner</button>
                       <button class="nav-link" id="alarmClockTab" data-bs-toggle="pill" data-bs-target="#alarmClock" type="button" role="tab" aria-controls="alarmClock" aria-selected="false">Alarm Clock</button>
                       <!-- <button class="nav-link" id="robotGameTab" data-bs-toggle="pill" data-bs-target="#robotGame" type="button" role="tab" aria-controls="robotGame" aria-selected="false">Robot Game</button> -->
                     </div>
@@ -242,13 +242,25 @@
                       <div class="tab-pane fade show active" id="taskPlanner" role="tabpanel" aria-labelledby="taskPlannerTab">
                         <video src="resources/videos/taskPlannerDemo.webm" type="video/webm" autoplay muted loop></video>
                         <div class="info">
-                            <p class="p-3"> This a task planner. You can edit or delete the tasks.</p>
+                            <p class="p-2"> This a task planner. You can edit or delete the tasks.</p>    
+                        </div>
+                        <div class="links">
+                            <p class="p-3"> 
+                                <a href="https://github.com/hebatullah2/taskPlanner" target="_blank" class="text-light ">Github Repositorie</a>
+                                <a href="https://hebatullah2.github.io/taskPlanner/" target="_blank" class="text-light float-right">URL</a>
+                            </p>
                         </div>
                       </div>
                       <div class="tab-pane fade" id="alarmClock" role="tabpanel" aria-labelledby="alarmClockTab">
                         <video src="resources/videos/alarmClockDemo.webm" type="video/webm" autoplay muted loop></video>
                         <div class="info">
-                            <p class="p-3"> This an alarm clock. It shows time in digital and analog format. You can set, delete and snooze alarms.</p>   
+                            <p class="p-2"> This an alarm clock. It shows time in digital and analog format. You can set, delete and snooze alarms.</p>   
+                        </div>
+                        <div class="links">
+                            <p class="p-3"> 
+                                <a href="https://github.com/hebatullah2/alarmClock" target="_blank" class="text-light ">Github Repositorie</a>
+                                <a href="https://hebatullah2.github.io/alarmClock/" target="_blank" class="text-light float-right">URL</a>
+                            </p>
                         </div>
                       </div>
                       <!-- <div class="tab-pane fade" id="robotGame" role="tabpanel" aria-labelledby="robotGameTab">
